TEST_PROGRAMS/INVALID/07/goKeywordFollowedByNewLine.go
//test semicolon insertion after GoLiteKeyWords
